FIX: change year and github path to docs

--- a/docs/_includes/head_print.html
+++ b/docs/_includes/head_print.html
@@ -27,4 +27,4 @@
     });
 </script>
 
-{% comment %} Copyright 2021 company_namememememe {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
