--- a/docs/_includes/links.html
+++ b/docs/_includes/links.html
@@ -42,4 +42,4 @@
 {% endfor %}
 {% endfor %}
 
-{% comment %} Copyright 2021 company_name {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
