--- a/docs/_includes/note.html
+++ b/docs/_includes/note.html
@@ -1,3 +1,3 @@
 <div markdown="span" class="alert alert-info" role="alert"><i class="fa fa-info-circle"></i> <b>Note:</b> {{include.content}}</div>
 
-{% comment %} Copyright 2021 company_nameme {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
