--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -20,4 +20,4 @@ $('#toc').on('click', 'a', function() {
 
 <div id="toc"></div>
 
-{% comment %} Copyright 2021 company_name {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
