--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -80,4 +80,4 @@
         <!-- /.container -->
 </nav>
 
-{% comment %} Copyright 2021 company_nameme {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
