--- a/docs/_includes/custom/series_acme.html
+++ b/docs/_includes/custom/series_acme.html
@@ -18,4 +18,4 @@
     </div>
 </div>
 
-{% comment %} Copyright 2021 company_nameme {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
