--- a/docs/_includes/custom/series_acme_next.html
+++ b/docs/_includes/custom/series_acme_next.html
@@ -29,4 +29,4 @@
     </div>
 </div>
 
-{% comment %} Copyright 2021 company_nameme {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
