--- a/docs/_includes/important.html
+++ b/docs/_includes/important.html
@@ -1,3 +1,3 @@
 <div markdown="span" class="alert alert-warning" role="alert"><i class="fa fa-warning"></i> <b>Important:</b> {{include.content}}</div>
 
-{% comment %} Copyright 2021 company_nameme {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
