--- a/docs/_includes/inline_image.html
+++ b/docs/_includes/inline_image.html
@@ -1,3 +1,3 @@
 <img class="inline" src="images/{{include.file}}" alt="{{include.alt}}" />
 
-{% comment %} Copyright 2021 company_namememe {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
