--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -57,4 +57,4 @@
 <!-- this highlights the active parent class in the navgoco sidebar. this is critical so that the parent expands when you're viewing a page. This must appear below the sidebar code above. Otherwise, if placed inside customscripts.js, the script runs before the sidebar code runs and the class never gets inserted.-->
 <script>$("li.active").parents('li').toggleClass("active");</script>
 
-{% comment %} Copyright 2021 company_name {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
