--- a/docs/_includes/taglogic.html
+++ b/docs/_includes/taglogic.html
@@ -30,4 +30,4 @@
    </tbody>
 </table>
 
-{% comment %} Copyright 2021 company_nameme {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
