--- a/docs/_includes/warning.html
+++ b/docs/_includes/warning.html
@@ -1,3 +1,3 @@
 <div markdown="span" class="alert alert-danger" role="alert"><i class="fa fa-exclamation-circle"></i> <b>Warning:</b> {{include.content}}</div>
 
-{% comment %} Copyright 2021 company_nameme {% endcomment %}
+{% comment %} Copyright 2023  {% endcomment %}
