Add dark-mode alternative

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -2,3 +2,11 @@
   background: #f8f8f8;
   border-style: solid;
 }
+
+[data-theme='dark'] .cpp.class {
+    background: #283747;
+}
+
+[data-theme='dark'] .mermaid {
+    background: #283747;
+}
