--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -1,11 +1,12 @@
-.cpp.class {
+.cpp.class,.cpp.function {
   background: #f8f8f8;
-  border-style: solid;
+ /* border-style: solid; */
 }
 
-[data-theme='dark'] .cpp.class {
+[data-theme='dark'] .cpp.class,.cpp.function {
     background: #283747;
 }
+
 
 [data-theme='dark'] .mermaid {
     background: #283747;
